# agents

./: .gitignore  README.md
adk/: pyproject.toml
adk/graph_based_workflow/: agent.py
adk/multi_tool_agent/: agent.py
adk/my_agent/: agent.py
agent-framework/first-agent/: main.py  pyproject.toml
agent-framework/graph_workflow/: main.py  pyproject.toml
agent-framework/hosted-as-func/: README.md  function_app.py  host.json  pyproject.toml
agent-framework/multi-turn/: main.py  pyproject.toml
agent-framework/workflow/: example.env  main.py  pyproject.toml
agentic-rag/: main.py  pyproject.toml
content-builder/: README.md
data_analysis/: README.md  main.py  pyproject.toml
deep-research-agent/: agent.py  pyproject.toml
foundry-local/chat/: main.py  pyproject.toml
guide_creator_flow/: README.md
handoffs-customer-support/: main.py  pyproject.toml
knowledge-base/: main.py  pyproject.toml
langchain/agentic-rag/: main.py
langchain/content-builder/: agent.py  pyproject.toml  subagents.yaml
langchain/content-builder/research/: prompt-engineering.md
langchain/deep-research-agent/: env.example
langchain/foundry-local/chat/: main.py
langchain/graph-sql-agent/: main.py  pyproject.toml
langchain/guide_creator_flow/: pyproject.toml
langchain/guide_creator_flow/output/: guide_outline.json
langchain/guide_creator_flow/src/guide_creator_flow/: main.py
langchain/guide_creator_flow/src/guide_creator_flow/crews/content_crew/: content_crew.py
langchain/guide_creator_flow/src/guide_creator_flow/crews/content_crew/config/: agents.yaml
langchain/internet-search/: main.py  pyproject.toml
langchain/langsmith-tutorial/: main.py
langchain/latest_ai_flow/: pyproject.toml
langchain/latest_ai_flow/src/latest_ai_flow/: main.py
langchain/skills-sql-assistant/: main.py
langchain/sql-agent/: README.md  main.py
langchain/test-mcp/: main.py  pyproject.toml
langsmith-tutorial/: env.example  pyproject.toml
latest_ai_flow/src/latest_ai_flow/crews/content_crew/: content_crew.py
latest_ai_flow/src/latest_ai_flow/crews/content_crew/config/: tasks.yaml
rag/: main.py  pyproject.toml
router-knowledge-base/: main.py  pyproject.toml
skills-sql-assistant/: pyproject.toml
sql-agent/: langgraph.json  main.py  pyproject.toml
subagents-personal-assistant/: main.py  pyproject.toml
(+1 files in other folders)
