[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "langchain[ollama]>=1.2.15",
    "langgraph>=1.1.9",
    "tiktoken>=0.12.0",
]
