[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.5.3",
    "httpx>=0.28.1",
    "langchain-core>=1.3.0",
    "langchain-ollama>=1.1.0",
    "markdownify>=1.2.2",
    "tavily-python>=0.7.23",
]
