[project]
name = "knowledge-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-milvus>=0.3.3",
    "langchain-ollama>=1.1.0",
    "milvus-lite>=2.5.1",
    "pymilvus[milvus-lite]>=2.6.12",
    "pypdf>=6.10.2",
]
